# libLab

./: .gitignore  CMakeLists.txt  main.cpp
lib/: myLib.cpp  myLib.h  mySharedLib.cpp  mySharedLib.h
